--- a/src/components/WeatherCard/WeatherCard.scss
+++ b/src/components/WeatherCard/WeatherCard.scss
@@ -12,6 +12,7 @@
 
   &__button-container {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
   }
 
@@ -22,5 +23,14 @@
     padding: 0 0.9rem;
     line-height: 1.365rem;
     font-weight: 400;
+    cursor: pointer;
+
+    &:hover {
+      background-color: $button-primary-hover-colour;
+    }
+
+    &--selected {
+      background-color: black;
+    }
   }
 }
